# gtfs-parser

./: Cargo.toml  README.md
resources/gtfs/: agency.txt  fare_attributes.txt  feed_info.txt  routes.txt  stop_times.txt
src/: error.rs  gtfs_serde.rs  lib.rs
src/structures/: agency.rs  attributions.rs  calendar.rs  calendar_dates.rs  fare_attributes.rs  fare_rules.rs  feed_info.rs  frequencies.rs  levels.rs  mod.rs  pathways.rs  routes.rs  shapes.rs  stop_times.rs  stops.rs  transfers.rs  trips.rs
