[package]
name = "gtfs-parser"
version = "0.1.0"
authors = ["iz <iz@genesismobo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["read-url"]
read-url = ["reqwest", "futures"]

[dependencies]
bytes = "1.0.1"
chrono = { version = "0.4.19", features = ["serde"] } 
csv = "1.1.6"
derivative = "2.2.0"
itertools = "0.10.0"
rgb = "0.8.27"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.126"
sha2 = "0.9.5"
thiserror = "1.0.25"
zip = "0.5.12"

reqwest = { version = "0.11.3", optional = true, features = ["blocking", "rustls-tls"], default-features = false }
futures = { version = "0.3", optional = true } 
